# mp_ai_beta

./: .gitignore  README.md
copilot-api/: .env.example  README.md  pyproject.toml
copilot-api/app/: auth_audit_store.py  debug_access.py  llm_nl2sql.py  main.py  nl2sql_engine.py  sql_guardrails.py  sql_runner.py  sql_user_messages.py  user_messages.py
copilot-api/app/report_suggestions/: __init__.py  models.py  report_filter_roll_dates.py  rerun_proxy.py  router.py  service.py
copilot-api/app/showcase/: __init__.py  (+13 more)
copilot-api/copilot_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
copilot-api/prompt_coverage/: README.md  generate_prompt_assets.py  generation_summary.json  intent_catalog.json  metric_definitions.md  prompt_dataset_distinct_review_20_per_copilot.jsonl  prompt_dataset_v1.jsonl  prompt_templates.csv  prompt_to_sql_contracts.json  schema_registry.json
copilot-api/scripts/: build_scene_backdrops.py  calibrate_scene_placement.py
copilot-api/tests/: FOLLOW_UP_PROMPTS_VERIFICATION.md  README.md  REPORT_SUGGESTIONS_TESTING.md  ephemeral_runner.py  prompt_regression_runner.py  test_company_contact_data1_sanitize.py  test_compositor_frame_finish.py  test_compositor_geometry.py  test_compositor_lighting.py  test_debug_access.py  test_llm_tenant_qualifier.py  test_module_scope_heuristic.py  test_redundant_qualifier_rewrite.py  test_regexp_like_rewrite.py  test_showcase_manifest.py  test_showcase_presentation.py  test_showcase_url_build.py  test_sql_user_messages.py  v3_inventory_prompt_test.py  v3_sales_prompt_test.py  verify_follow_up_prompts.py
(+87 files in other folders)
