[project]
name = "copilot-api"
version = "0.1.0"
description = "Read-only AI copilot API (NL -> SELECT SQL -> results)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "sqlglot>=25.0",
  "mysql-connector-python>=9.0",
  "python-dotenv>=1.0",
  "openai>=1.52",
]

[tool.uvicorn]
factory = false

