[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copilot-api"
version = "0.1.0"
description = "Read-only AI copilot API (NL -> SELECT SQL -> results)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "sqlglot>=25.0",
  "mysql-connector-python>=9.0",
  "python-dotenv>=1.0",
  "openai>=1.52",
  "pillow>=10.0",
]

[project.optional-dependencies]
# Showcase Studio Phase 1 optional cutout (background removal). Large download (onnxruntime).
showcase = ["rembg[cpu]>=2.0.50"]

# Only ship the `app` package. `prompt_coverage/` is prompt data, not a Python package.
[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
"app.showcase" = ["data/*.json", "data/scene_backdrops/*.png"]

[tool.uvicorn]
factory = false

